infra/cluster/ingresses/gub_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gub-ing
  annotations:
    kubernetes.io/ingress.global-static-ip-name: gub
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "gce"
spec:
  tls:
  - secretName: prow-tls
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: gub
          servicePort: 8888
